# wxtrio

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  wxtrio.py
examples/: menus.py  simple.py  utils.py  xrc_example.py  xrc_example.xrc
wxtrio/: __init__.py  core.py
